# TanksGame

./: .gitignore  Action.h  CMakeLists.txt  Class Design UML.docx  GameBoard.cpp  GameDrawer.cpp  GameObjects.cpp  GameObjects.h  HLD_doc.docx  Makefile  Mine.cpp  MovableObject.cpp  README.md  Shell.cpp  StaticObject.cpp  Tank.cpp  Wall.cpp  bonus.txt  input_file_format.txt  main.cpp  make.bat  tanks_game.cpp  workflow_uml.docx  ~$rkflow_uml.docx
Assignment1/: HLD_doc.docx  Makefile  bonus.txt  clean.bat  main.cpp  make.bat
Assignment2/: ActionRequestutils.h  BoardFactory.cpp  BoardFactory.h  BoardSatelliteView.cpp  GameManager.h  Makefile  PlayerOne.cpp  PlayerTwo.cpp  ReadBoard.h  bonus.txt  config.h  config.txt  main.cpp  readme.md
Assignment2/Tests/: Makefile  (+4 more)
Assignment3/: Makefile  bonus.txt  main.cpp  readme.md
BoardFactory/: BoardFactory.cpp  BoardFactory.h
GameBoard/: BoardCell.cpp  GameBoard.cpp  GameBoard.h
GameCollisionHandler/: GameCollisionHandler.cpp  GameCollisionHandler.h
GameDrawer/: DrawingTypes.h  GameDrawer.h
GameManager/: GameManager.cpp  GameManager.h
GameObjects/: Direction.h  GameObject.cpp  GameObjectType.h  GameObjects.h  Mine.cpp  MovableObject.cpp  Shell.cpp  StaticObject.cpp  Tank.cpp  TankAction.h  Wall.cpp
GamePlayer/: GamePlayer.cpp  GamePlayer.h  PlayerUtils.cpp  PlayerUtils.h
InputFiles/: input_file_1.txt  input_file_2.txt  input_file_7.txt
InputOutputFiles/: input_a.txt  output_a.txt  output_b.txt  output_c.txt
Logger/: Logger.cpp  Logger.h
ScriptsAndHelpers/: example_actions.txt  generate_random_input_file.cpp
(+286 files in other folders)
